--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,24 @@
             "type": "python",
             "request": "launch",
             "module": "autoremovetorrents.main",
-            "args": ["--view"]
+            "args": [
+                "--view"
+            ]
+        },
+        {
+            "name": "Docker: Python - General",
+            "type": "docker",
+            "request": "launch",
+            "preLaunchTask": "docker-run: debug",
+            "python": {
+                "pathMappings": [
+                    {
+                        "localRoot": "${workspaceFolder}",
+                        "remoteRoot": "/app"
+                    }
+                ],
+                "projectType": "general"
+            }
         }
     ]
 }
