--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,15 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [{
+            "name": "Python: Run.py",
+            "type": "python",
+            "request": "launch",
+            "program": "run.py",
+            "console": "integratedTerminal"
+        },
         {
-            "name": "Python: Module Test",
+            "name": "Python: Module Autoremovetorrents",
             "type": "python",
             "request": "launch",
             "module": "autoremovetorrents.main",
@@ -19,12 +25,10 @@
             "request": "launch",
             "preLaunchTask": "docker-run: debug",
             "python": {
-                "pathMappings": [
-                    {
-                        "localRoot": "${workspaceFolder}",
-                        "remoteRoot": "/app"
-                    }
-                ],
+                "pathMappings": [{
+                    "localRoot": "${workspaceFolder}",
+                    "remoteRoot": "/app"
+                }],
                 "projectType": "general"
             }
         }
