--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   autoremovetorrents:
-    image: autoremovetorrents
+    image: jrhubott/autoremove-torrents
     build:
       context: .
       dockerfile: Dockerfile
