--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "module": "autoremovetorrents.main",
             "args": [
-                "--view"
+                "--view" , "--host=http://192.168.0.60:9091"
             ]
         },
         {
