--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,20 +1,19 @@
 # For more information, please refer to https://aka.ms/vscode-docker-python
-FROM python:3.8.3-slim-buster
+FROM python:3.8.3-slim
 
 # Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE 1
-
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED 1
-
-RUN apt-get update \
-&& apt-get install gcc -y \
-&& apt-get clean
 
 # Install pip requirements
 ADD requirements.txt .
 
-RUN python -m pip install -r requirements.txt
+RUN apt-get update \
+&& apt-get install -yq --no-install-recommends \
+    build-essential \
+&& apt-get clean && rm -rf /var/lib/apt/lists/* \
+&& python -m pip install -r requirements.txt
 
 WORKDIR /app
 ADD config/* /config/
